--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,9 @@
 # Groq API — get your free key at https://console.groq.com
-GROQ_API_KEY=your_groq_api_key_here
+GROQ_API_KEY=groq_api_key
 
 # Server
 PORT=3000
 NODE_ENV=development
 
 # CORS — paste your Chrome extension ID here after loading it
-ALLOWED_ORIGINS=chrome-extension://your_extension_id_here
+ALLOWED_ORIGINS=chrome-extension://extension_id
